--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-.gradle
+/.gradle/
+/.settings/
+.project
+.classpath
+/bin/
 /build/
-
+runner.java
 # Ignore Gradle GUI config
 gradle-app.setting
 
