--- a/build.gradle
+++ b/build.gradle
@@ -27,10 +27,10 @@ dependencies {
     api 'org.apache.commons:commons-math3:3.6.1'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:21.0'
-    implementation 'net.tullco:TullUtils:0.10'
+    implementation 'net.tullco:TullUtils:0.14.2'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.xerial:sqlite-jdbc:3.21.0.1'
 }
 
