--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ apply plugin: 'java-library'
 apply plugin: 'java'
 apply plugin: 'eclipse'
 
+targetCompatibility = '1.8'
+
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use jcenter for resolving your dependencies.
