--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ publishing {
         maven(MavenPublication) {
             groupId 'com.gearreald'
             artifactId 'TullFrame'
-            version '1.0.8.2'
+            version '1.0.8.3'
 
             from components.java
             artifact sourcesJar
@@ -45,6 +45,7 @@ dependencies {
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'net.tullco:TullUtils:0.15.1'
+    implementation 'de.ruedigermoeller:fst:2.56'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
